feat: ready for game 10

--- a/src/data/s1e3/categories.yml
+++ b/src/data/s1e3/categories.yml
@@ -1,12 +1,12 @@
 - name: CSS
   sponsor: CodePen
 
-- name: User Experience
+- name: APIs & SDKs
 
-- name: User Management
+- name: Authentication
   sponsor: Clerk
 
-- name: Developerisms
+- name: Acronyms
 
-- name: Frameworks
+- name: Dev Lore
   sponsor: Neon
